--- a/css/main.css
+++ b/css/main.css
@@ -5,18 +5,32 @@
 }
 body {
 	height: 100vh;
+	font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 header {
 	background-image: url('../images/runner.jpg');
 	position: fixed;
 	width: 100%;
-	height: 30vh;
+	height: 70vh;
 	top: 0;
 	/* background-size: 180%; */
-	background-size: cover;
+	background-size: contain;
 	/* background-position: 100% 0%; */
+	/* display: flex;
+	justify-content: flex-end;
+	align-items: flex-end; */
+	padding-top: 90px;	
+	padding-left: 50px;
+	background-repeat: no-repeat;
+}
+
+header h1 {
+	/* position: absolute; */
+	/* bottom: 30px;
+	right: 100px; */
+margin-bottom: 20px;
 }
 
 main {
-	margin-top: 30vh;
+	margin-top: 70vh;
 }
