--- a/css/main.css
+++ b/css/main.css
@@ -8,13 +8,13 @@ body {
 	font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 header {
-	background-image: url('../images/runner.jpg');
+	background-image: url('../images/runner3.jpg');
 	position: fixed;
 	width: 100%;
-	height: 70vh;
+	height: 30vh;
 	top: 0;
 	/* background-size: 180%; */
-	background-size: contain;
+	background-size: cover;
 	/* background-position: 100% 0%; */
 	/* display: flex;
 	justify-content: flex-end;
@@ -32,5 +32,5 @@ margin-bottom: 20px;
 }
 
 main {
-	margin-top: 70vh;
+	margin-top: 30vh;
 }
