--- a/css/main.css
+++ b/css/main.css
@@ -46,8 +46,16 @@ section {
 	margin-top: 1rem;
 }
 
+section ul {
+	margin-left: 0.9rem;
+}
+
 section:first-of-type {
 	margin-top: 3rem;
+}
+
+section:last-of-type {
+	margin-bottom: 3rem;
 }
 
 section h2 {
