--- a/css/main.css
+++ b/css/main.css
@@ -37,7 +37,6 @@ header h1 {
 }
 
 main {
-	margin: 30vh auto 0 auto;
 	margin: 0 auto;
 	width: 80%;
 }
@@ -68,4 +67,26 @@ section.products img {
 	height: 150px;
 	object-fit: cover;
 	border-radius: 10px;
+}
+
+footer {
+	background-color: navy;
+	padding: 1rem 10%;
+	display: flex;
+	align-items: center;
+	gap: 1rem;
+	position: absolute;
+	inset: auto 0 0 0;
+}
+
+footer p {
+	color: #fff;
+}
+
+footer img {
+	width: 100px;
+	height: 100px; 
+	border-radius: 50%;
+	/* aspect-ratio: 1/4; */
+	object-fit: cover;
 }
